Updates to woocommerce sass and fix for broken includes

--- a/assets/sass/woocommerce/_cart.scss
+++ b/assets/sass/woocommerce/_cart.scss
@@ -1,7 +1,7 @@
 .woocommerce-cart-form {
 
 	.shop_table {
-		@extend .table, .table-responsive;
+		@extend .table;
 		margin-bottom: $spacing-bottom;
 		width: 100%;
 
