--- a/assets/sass/woocommerce/woocommerce.scss
+++ b/assets/sass/woocommerce/woocommerce.scss
@@ -11,7 +11,7 @@
 @import '_ratings';
 
 .woocommerce {
-	#container {
+	.content-area {
 		@extend .container;
 	}
 }
